force-app/main/default/objects/DR_Settings__c/DR_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>DR : required fields tracking, Constant &quot;Others&quot; for SalesOps Admin, Deal Status related constants</description>
    <label>DR : Settings</label>
</CustomObject>