force-app/main/default/objects/DR_Settings__c/fields/Deal_Reg_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Record_Types__c</fullName>
    <description>Deal Reg Record type names used in Deal Reg Status</description>
    <inlineHelpText>Deal Reg Record type names used in Deal Reg Status</inlineHelpText>
    <label>Deal Reg Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>