force-app/main/default/objects/DR_Settings__c/fields/Deal_Reg_Reqd_Fields__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Reqd_Fields__c</fullName>
    <description>Fields that are required to have values before the Deal is submitted for Approval</description>
    <inlineHelpText>Fields that are required to have values before the Deal is submitted for Approval</inlineHelpText>
    <label>Deal Reg Reqd Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>