force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_180DaysExtensionApproved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_180DaysExtensionApproved__c</fullName>
    <label>Deal Status : 180DaysExtensionApproved</label>
    <length>50</length>
    <type>Text</type>
</CustomField>