force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_ApprovalInProgress__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_ApprovalInProgress__c</fullName>
    <defaultValue>&quot;Approval In-Progress&quot;</defaultValue>
    <description>Constant</description>
    <label>Deal Status : ApprovalInProgress</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>