force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_Approved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_Approved__c</fullName>
    <defaultValue>&quot;Approved&quot;</defaultValue>
    <description>Constant</description>
    <label>Deal Status : Approved</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>