force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_AutoTerminated__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_AutoTerminated__c</fullName>
    <defaultValue>&quot;Auto Terminated&quot;</defaultValue>
    <description>Contstant</description>
    <label>Deal Status : AutoTerminated</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>