force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_ClaimApprovalInProgress__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_ClaimApprovalInProgress__c</fullName>
    <defaultValue>&quot;Claim Approval In-Progress&quot;</defaultValue>
    <description>Constant</description>
    <label>Deal Status : ClaimApprovalInProgress</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>