force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_ClaimRejected__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_ClaimRejected__c</fullName>
    <defaultValue>&quot;Claim Rejected&quot;</defaultValue>
    <description>Constant</description>
    <label>Deal Status : ClaimRejected</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>