force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_ExtensionApprovalInProgress__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_ExtensionApprovalInProgress__c</fullName>
    <defaultValue>&quot;Extension Approval In-Progress&quot;</defaultValue>
    <description>Constant</description>
    <label>Deal Status : ExtensionApprovalInProgres</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>