force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_ExtensionApproved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_ExtensionApproved__c</fullName>
    <defaultValue>&quot;Extension Approved&quot;</defaultValue>
    <description>Costant</description>
    <label>Deal Status : ExtensionApproved</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>