force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_NotSubmitted__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_NotSubmitted__c</fullName>
    <defaultValue>&quot;Not Submitted&quot;</defaultValue>
    <description>Constant</description>
    <label>Deal Status : NotSubmitted</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>