force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_Rejected__c</fullName>
    <defaultValue>&quot;Rejected&quot;</defaultValue>
    <description>Constant</description>
    <label>Deal Status : Rejected</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>