force-app/main/default/objects/DR_Settings__c/fields/Deal_Status_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_Terminated__c</fullName>
    <defaultValue>&quot;Terminated&quot;</defaultValue>
    <description>Constant</description>
    <label>Deal Status : Terminated</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>