force-app/main/default/objects/DR_Settings__c/fields/DR_Constant_Others__c.field-meta.xml
<CustomField>
    <fullName>DR_Constant_Others__c</fullName>
    <description>Constant used for deriving SalesOps admin in case no matching billing country found. It can be defaulted to &quot;Others&quot; or match with the value in DR : SalesOps : Admins</description>
    <inlineHelpText>Constant used for deriving SalesOps admin in case no matching billing country found. It can be defaulted to &quot;Others&quot; or match with the value in DR : SalesOps : Admins or remain blank</inlineHelpText>
    <label>DR Constant Others</label>
    <length>80</length>
    <type>Text</type>
</CustomField>