force-app/main/default/objects/DR_Settings__c/fields/DR_DLI_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>DR_DLI_Opportunity_Probability__c</fullName>
    <defaultValue>20</defaultValue>
    <description>DLI Opportunity Probability set during DLI Opp Reg Lead Conversion</description>
    <inlineHelpText>DLI Opportunity Probability set during DLI Opp Reg Lead Conversion</inlineHelpText>
    <label>DR : DLI Opportunity : Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>