force-app/main/default/objects/DR_Settings__c/fields/DR_DLI_Opportunity_RT_ID__c.field-meta.xml
<CustomField>
    <fullName>DR_DLI_Opportunity_RT_ID__c</fullName>
    <defaultValue>&quot;0121W000000lCKMQA2&quot;</defaultValue>
    <description>DLI Opportunity Record Type Id</description>
    <inlineHelpText>DLI Opportunity Record Type Id</inlineHelpText>
    <label>DR : DLI Opportunity : RT ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>