force-app/main/default/objects/DR_Settings__c/fields/DR_DLI_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>DR_DLI_Opportunity_Stage__c</fullName>
    <defaultValue>&quot;Defined&quot;</defaultValue>
    <description>DLI Opportunity Stage set during DLI Opp Reg Lead conversion</description>
    <inlineHelpText>DLI Opportunity Stage set during DLI Opp Reg Lead conversion</inlineHelpText>
    <label>DR : DLI Opportunity : Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>