force-app/main/default/objects/DR_Settings__c/fields/DR_DLI_PBID_OPP_REG__c.field-meta.xml
<CustomField>
    <fullName>DR_DLI_PBID_OPP_REG__c</fullName>
    <defaultValue>&quot;01s1W000000hjqV&quot;</defaultValue>
    <description>DLI Price Book Id for Opp Reg</description>
    <inlineHelpText>DLI Price Book Id for Opp Reg</inlineHelpText>
    <label>DR : DLI : PBID : OPP REG</label>
    <length>18</length>
    <type>Text</type>
</CustomField>