force-app/main/default/objects/DR_Settings__c/fields/DR_ForecastCategoryName_Closed__c.field-meta.xml
<CustomField>
    <fullName>DR_ForecastCategoryName_Closed__c</fullName>
    <defaultValue>&quot;Closed&quot;</defaultValue>
    <label>DR ForecastCategoryName Closed</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>