force-app/main/default/objects/DR_Settings__c/fields/DR_NALA_TAM_User_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_NALA_TAM_User_Id__c</fullName>
    <description>Deal Registration :  User id to be used for the Deal Reg Lead ownerId field for NALA regions</description>
    <inlineHelpText>User id to be used for the Deal Reg Lead ownerId field for NALA regions</inlineHelpText>
    <label>DR : NALA : TAM User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>