force-app/main/default/objects/DR_Settings__c/fields/DR_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>DR_Opportunity_Probability__c</fullName>
    <description>Deal Registration 3.0 : set Opportunity Probability to 20% during Deal Registration lead conversion</description>
    <inlineHelpText>Deal Registration 3.0 : set Opportunity Probability to 20% during Deal Registration lead conversion</inlineHelpText>
    <label>DR : Opportunity : Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>