force-app/main/default/objects/DR_Settings__c/fields/DR_Opportunity_RTID__c.field-meta.xml
<CustomField>
    <fullName>DR_Opportunity_RTID__c</fullName>
    <description>Deal Registration : Opportunity Record Type Id (After conversion from Deal Registration Lead to Opportunity)</description>
    <inlineHelpText>Deal Registration : Opportunity Record Type Id (After conversion from Deal Registration Lead to Opportunity)</inlineHelpText>
    <label>DR : Opportunity : RT ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>