force-app/main/default/objects/DR_Settings__c/fields/DR_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>DR_Opportunity_Stage__c</fullName>
    <description>Deal Registration 3.0 : set Opportunity stage to Qualified during Deal Registration lead conversion</description>
    <inlineHelpText>Deal Registration 3.0 : set Opportunity stage to Qualified during Deal Registration lead conversion</inlineHelpText>
    <label>DR : Opportunity : Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>