force-app/main/default/objects/DR_Settings__c/fields/DR_PBID_OPPREG__c.field-meta.xml
<CustomField>
    <fullName>DR_PBID_OPPREG__c</fullName>
    <description>Id of Opp Reg Pricebook</description>
    <inlineHelpText>Id of Opp Reg Pricebook</inlineHelpText>
    <label>DR : PBID : OPPREG</label>
    <length>18</length>
    <type>Text</type>
</CustomField>