force-app/main/default/objects/DR_Settings__c/fields/DR_PBID_OPPREG_EDU__c.field-meta.xml
<CustomField>
    <fullName>DR_PBID_OPPREG_EDU__c</fullName>
    <description>Id of Opp Reg EDU Pricebook</description>
    <inlineHelpText>Id of Opp Reg EDU Pricebook</inlineHelpText>
    <label>DR : PBID : OPPREG_EDU</label>
    <length>18</length>
    <type>Text</type>
</CustomField>