force-app/main/default/objects/DR_Settings__c/fields/DR_PBID_STD__c.field-meta.xml
<CustomField>
    <fullName>DR_PBID_STD__c</fullName>
    <defaultValue>&quot;01s40000000ANuhAAG&quot;</defaultValue>
    <description>Standard Pricebook Id - Automatically set Standard PB ID to Opp Reg Opportunities</description>
    <inlineHelpText>Standard Pricebook Id - Automatically set Standard PB ID to Opp Reg Opportunities</inlineHelpText>
    <label>DR : PBID : STD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>