force-app/main/default/objects/DR_Settings__c/fields/DR_Set_Approvers_Fresh_OnEachSubmit__c.field-meta.xml
<CustomField>
    <fullName>DR_Set_Approvers_Fresh_OnEachSubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you want fresh approvers (SalesOps Admin, PBM, PBM Manager) on each submit (Deal Reg Approval, Extension Approval, Claim Approval) set this field to true.</inlineHelpText>
    <label>DR : Set Approvers Fresh OnEachSubmit</label>
    <type>Checkbox</type>
</CustomField>