force-app/main/default/objects/DR_Settings__c/fields/DR_Threshold_Extn_Submission__c.field-meta.xml
<CustomField>
    <fullName>DR_Threshold_Extn_Submission__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Minimum Opportunity Probability (%) to be eligible for extn. submission</description>
    <inlineHelpText>Minimum Opportunity Probability (%) to be eligible for extn. submission (eg., if probability &gt; 40% are allowed for extn. submission then set this field to 40)</inlineHelpText>
    <label>DR Threshold : Extn. Submission</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>