force-app/main/default/objects/DR_Settings__c/fields/DR_Threshold_Submission__c.field-meta.xml
<CustomField>
    <fullName>DR_Threshold_Submission__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Minimum Opportunity Probability (%) to be eligible for submission</description>
    <inlineHelpText>Minimum Opportunity Probability (%) to be eligible for submission (eg., if probability &gt; 10% are allowed for submission then set this field to 10)</inlineHelpText>
    <label>DR Threshold : Submission</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>