force-app/main/default/objects/DR_Settings__c/fields/Lead_RecordTypeName_For_Deal_Reg__c.field-meta.xml
<CustomField>
    <fullName>Lead_RecordTypeName_For_Deal_Reg__c</fullName>
    <defaultValue>&quot;Deal Registration&quot;</defaultValue>
    <description>Deal Registration Lead Record Type Name</description>
    <inlineHelpText>Deal Registration Lead Record Type  Name</inlineHelpText>
    <label>Lead RecordTypeName For Deal Reg</label>
    <length>30</length>
    <type>Text</type>
</CustomField>