force-app/main/default/objects/DR_Settings__c/fields/Lead_Status_IR__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_IR__c</fullName>
    <defaultValue>&quot;In Review&quot;</defaultValue>
    <description>Opp Reg 3.0 field to set the Lead Status to  &quot;In Review&quot;</description>
    <inlineHelpText>Opp Reg 3.0 field to set the Lead Status to  &quot;In Review&quot;</inlineHelpText>
    <label>Lead Status : IR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>