force-app/main/default/objects/DR_Settings__c/fields/Lead_Status_R__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_R__c</fullName>
    <description>Lead Status: Rejected</description>
    <inlineHelpText>Lead Status: Rejected</inlineHelpText>
    <label>Lead Status : R</label>
    <length>10</length>
    <type>Text</type>
</CustomField>