force-app/main/default/objects/DR_Settings__c/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <defaultValue>&quot;Deal Registration&quot;</defaultValue>
    <description>Opp Reg 3.0 field to set the DR_Lead_Type__c &quot;Deal Registration&quot; of the Lead</description>
    <inlineHelpText>Opp Reg 3.0 field to set the DR_Lead_Type__c &quot;Deal Registration&quot; of the Lead</inlineHelpText>
    <label>Lead Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>