force-app/main/default/objects/DR_Settings__c/fields/ProgramType_DGXJumpStart__c.field-meta.xml
<CustomField>
    <fullName>ProgramType_DGXJumpStart__c</fullName>
    <description>Program Type option : DGX Station Jumpstart</description>
    <inlineHelpText>Program Type option : DGX Station Jumpstart</inlineHelpText>
    <label>ProgramType_DGXJumpStart</label>
    <length>30</length>
    <type>Text</type>
</CustomField>