force-app/main/default/objects/DR_Settings__c/fields/PS_Name_PP_CRM_Partner_Deal_Editor__c.field-meta.xml
<CustomField>
    <fullName>PS_Name_PP_CRM_Partner_Deal_Editor__c</fullName>
    <defaultValue>&quot;PP_CRM_PARTNER_DEAL_EDITOR&quot;</defaultValue>
    <description>Constant for PP_CRM_PARTNER_DEAL_EDITOR permission set name</description>
    <label>PS Name : PP CRM Partner Deal Editor</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>