force-app/main/default/objects/DR_Settings__c/fields/Public_Group_OPP_REG_Alt_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_OPP_REG_Alt_Submitter__c</fullName>
    <defaultValue>&quot;OPPORTUNITY_REG_ALT_SUBMITTER&quot;</defaultValue>
    <description>API name of the Public Group &quot;OPPORTUNITY REG : ALT SUBMITTER&quot;</description>
    <inlineHelpText>API name of the Public Group &quot;OPPORTUNITY REG : ALT SUBMITTER&quot;</inlineHelpText>
    <label>Public Group : OPP REG Alt Submitter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>